gcc/testsuite/g++.dg/conversion/reinterpret3.C
struct S {};

S s;

void f() {
  reinterpret_cast<const S>(s); // { dg-error "3:invalid cast" }
}
